--- a/树之习题选讲 网易云课堂第七讲.md
+++ b/树之习题选讲 网易云课堂第七讲.md
@@ -5,7 +5,7 @@
 2. Pop的顺序给出中序遍历
 ```
 void solve( int preL, int inL, int postL, int n )
-{ 
+{
   if (n==0) return;
   if (n==1) {post[postL] = pre[preL]; return;}
   root = pre[preL];
@@ -17,4 +17,55 @@ void solve( int preL, int inL, int postL, int n )
   solve(preL+L+1, inL+L+1, postL+L, R);
 }
 ```
-![TreeTraversalsAgain]()
+![TreeTraversalsAgain](https://github.com/zcenao21/Data-Structure/blob/master/photo/treetraversalsagain.PNG?raw=true)
+
+---
+### 最短路径问题
+- 最短路径问题的抽象
+在网络中，求两个不同顶点之间的所有路径中，边的权值之和最小的那一条路径就是两点之间的最短路径（Shortest Path）。第一个顶点为源点（Source），最后一个顶点为终点（Destination）。
+- 问题分类
+  1. 单源最短路径问题：从某固定源点出发，求其到所有其他顶点的最短路径
+    1. （有向）无权图
+    2. （有向）有权图
+  2. 多源最短路径问题：求任意两顶点间的最短路径
+- 无权图的单源最短路算法
+按照递增（非递减）的顺序找出到各个顶点的最短路，类似BFS（深度优先算法），增加了记录最短路径和经过顶点功能
+```
+void Unweighted ( Vertex S )
+{
+  Enqueue(S, Q);
+  while(!IsEmpty(Q)){
+    V = Dequeue(Q);
+    for ( V 的每个邻接点W )
+    if ( dist[W]==-1 ) {
+      dist[W] = dist[V]+1;
+      path[W] = V;
+      Enqueue(W, Q);
+    }
+  }
+}
+```
+dist[W] = S   到W的最短距离  
+dist[S] = 0
+path[W] = S   到W的路上经过的某顶点
+- 有权图的单源最短路算法
+Dijkstra算法
+- 多源最短路算法
+Floyd算法
+```
+void Floyd()
+{
+for ( i = 0; i < N; i++ )
+  for( j = 0; j < N; j++ ) {
+  D[i][j] = G[i][j];
+  path[i][j] = -1;
+  }
+  for( k = 0; k < N; k++ )
+    for( i = 0; i < N; i++ )
+      for( j = 0; j < N; j++ )
+        if( D[i][k] + D[k][j] < D[i][j] ) {
+          D[i][j] = D[i][k] + D[k][j];
+          path[i][j] = k;
+  }
+}
+```
