--- a/图 网易云课堂第八讲.md
+++ b/图 网易云课堂第八讲.md
@@ -1,8 +1,8 @@
 ### 最小生成树问题
 - 什么是最小生成树
   1. 是一棵树
-    - 无回路
-    - |V|个顶点一定有|V|-1条边
+    1. 无回路
+    2. |V|个顶点一定有|V|-1条边
   2. 是生成树
     - 包含全部顶点
     - |V|-1条边都在图里
@@ -73,7 +73,8 @@ void Kruskal ( Graph G )
     }
   }
   ```
-  $T = O( |V|^2 )$
+  T = O( |V|^2 )
+  
   2. 聪明的算法:随时将入度为零的顶点放到容器中  
   ```
   void TopSort()
