--- a/图 网易云课堂第八讲.md
+++ b/图 网易云课堂第八讲.md
@@ -95,8 +95,7 @@ void Kruskal ( Graph G )
   }
   ```
   ![](http://latex.codecogs.com/gif.latex?\T = O( |V| + |E|)    
-  ![node](http://latex.codecogs.com/gif.latex?\\frac{\\partial J}{\\partial \\theta_k^{(j)}}=\\sum_{i:r(i,j)=1}{\\big((\\theta^{(j)})^Tx^{(i)}-y^{(i,j)}\\big)x_k^{(i)}}+\\lambda \\xtheta_k^{(j)})  
-  <img src="http://latex.codecogs.com/gif.latex?\frac{\partial J}{\partial \theta_k^{(j)}}=\sum_{i:r(i,j)=1}{\big((\theta^{(j)})^Tx^{(i)}-y^{(i,j)}\big)x_k^{(i)}}+\lambda \theta_k^{(j)}" />
+  ![node](http://latex.codecogs.com/gif.latex?%5Cfrac%7B1%7D%7B2%7D)
 
 作者：Deep Reader
 链接：https://www.zhihu.com/question/26887527/answer/43166739
