--- a/排序 网易云课堂第九讲.md
+++ b/排序 网易云课堂第九讲.md
@@ -42,7 +42,7 @@ void Insertion_Sort( ElementType A[], int N )
 
 ---
 ### 希尔排序
-定义增量序列![](http://latex.codecogs.com/gif.latex?D_M%20%3E%20D_%7BM-1%7D%20%3E%20...%20%3E%20D_1%20%3D%201), 对每个Dk 进行“D_k-间隔”排序( k = M, M-1, … 1 )
+定义增量序列D_M > D_{M-1} > … > D_1 = 1, 对每个Dk 进行“D_k-间隔”排序( k = M, M-1, … 1 )
 - 原始希尔排序
 ```
 void Shell_sort( ElementType A[], int N )
@@ -56,7 +56,7 @@ void Shell_sort( ElementType A[], int N )
   }
 }
 ```
-最坏情况： ![](http://latex.codecogs.com/gif.latex?T%20%3D%20%5CTheta%28%20N%5E2%20%29)
+最坏情况： \Theta(N^2)
 - 坏例子  
 ![sheer](https://github.com/zcenao21/Data-Structure/blob/master/photo/sheer.PNG?raw=true)  
 增量元素不互质，则小增量可能根本不起作用。
