--- a/数据结构-网易云课堂第一讲.md
+++ b/数据结构-网易云课堂第一讲.md
@@ -30,9 +30,9 @@
 3. 产生输出
 4. 一定在有限步骤之后终止
 5. 每一条指令必须
-  - 有充分明确的目标，不可以有歧义
-  - 计算机能处理的范围之内
-  - 描述应不依赖于任何一种语言及具体实现手段
+  1. 有充分明确的目标，不可以有歧义
+  2. 计算机能处理的范围之内
+  3. 描述应不依赖于任何一种语言及具体实现手段
 - 什么是好的算法
 1. 空间复杂度S(n) —— 根据算法写成的程序在执行时占用存储单元的长度。这个长度往往与输入数据的规模有关。空间复杂度过高的算法可能导致使用的内存超限，造成程序非正常中断。
 2.  时间复杂度T(n) —— 根据算法写成的程序在执行时耗费时间的长度。这个长度往往也与输入数据的规模有关。时间复杂度过高的低效算法可能导致我们在有生之年都等不到运行结果。
