--- a/树-网易云课堂第五讲.md
+++ b/树-网易云课堂第五讲.md
@@ -102,6 +102,7 @@ ElementType DeleteMax( MaxHeap H )
 设二叉树有n个叶子结点，每个叶子结点带有权值 $w_k$，从根结点到每个叶子结点的长度为 $l_k$，则每个叶子结点的带权路径长度之和就是：
 $WPL=\sum_{k-1}^nw_kl_k$   
 >（嘿嘿，第一次发现CSDN支持Latex语法，终于可以开心的敲公式了！）
+>然而，最终还是到了GitHub上面，latex又不支持了！希望以后GitHub能够支持latex
 
 - **最优二叉树**或**哈夫曼树:** WPL最小的二叉树
 - 哈夫曼树的构造:每次把权值最小的两棵二叉树合并
